--- a/.github/workflows/stats-cards.yml
+++ b/.github/workflows/stats-cards.yml
@@ -23,4 +23,4 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
           # 想要什么主题？爱丽丝帮您选了 tokyonight (夜间模式)
           # 如果想要别的，可以改成 default, dark, solarized_dark 等
-          THEME: tokyonight
+          THEME: default
