--- a/.github/workflows/stats-cards.yml
+++ b/.github/workflows/stats-cards.yml
@@ -2,14 +2,13 @@ name: GitHub-Profile-Summary-Cards
 
 on:
   schedule:
-    - cron: "0 0 * * *" # 每天半夜自动跑
-  workflow_dispatch:    # 允许手动点按钮跑
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     name: generate-github-profile-summary-cards
-    
     permissions:
       contents: write
     
@@ -17,8 +16,8 @@ jobs:
       - uses: actions/checkout@v3
       
       - uses: vn7n24fzkq/github-profile-summary-cards@release
-      
         env:
           GITHUB_TOKEN: ${{ secrets.PROFILE_SUMMARY_CARD_TOKEN }}
         with:
           USERNAME: ${{ github.repository_owner }}
+          BRANCH_NAME: "main"
