--- a/.github/workflows/stats-cards.yml
+++ b/.github/workflows/stats-cards.yml
@@ -17,7 +17,9 @@ jobs:
       
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
+          # 老师，请确保 Secret 名字真的是这个，且里面粘贴了新 Token
           GITHUB_TOKEN: ${{ secrets.PROFILE_SUMMARY_CARD_TOKEN }}
         with:
           USERNAME: ${{ github.repository_owner }}
           BRANCH_NAME: "main"
+          # 注意：这里绝对没有 THEME 这一行了！
